
    o	checkS3methods() in package 'tools' now also looks for generics
	in the loaded namespaces/packages listed in the Depends fields
	of the package's DESCRIPTION file when testing an installed
	package.

    o   The DESCRIPTION file of packages may contain a 'Suggests:'
        field for packages that are only used in examples or
        vignettes.


C-LEVEL FACILITIES

    o	arraySubscript and vectorSubscript take a new argument which
	is a function pointer that provides access to character
	strings (such as the names vector) rather than assuming these
	are passed in.

    o	R_CheckUserInterrupts is now described in `Writing R Extensions'
	and there is a new equivalent subroutine rchkusr for calling
	from FORTRAN code.

    o	Salloc and Srealloc are provided in S.h as wrappers for S_alloc
	and S_realloc, since current S versions use these forms.

    o	The type used for vector lengths is now R_len_t rather than
	int, to allow this to de defined as long and so allow vectors
	longer than 2^31 - 1 elements on 64-bit platforms.


DEPRECATED & DEFUNCT

    o	print.coefmat() is defunct, replaced by printCoefmat().

    o	codes() and codes<-() are defunct.

    o	anovalist.lm (replaced in 1.2.0) is now defunct.

    o	glm.fit.null(), lm.fit.null() and lm.wfit.null() are defunct.

    o	print.atomic() is defunct.

    o	The command-line arguments --nsize and --vsize are no longer
	recognized as synonyms for --min-nsize and --min-vsize (which
	replaced them in 1.2.0).

    o	Unnecessary methods coef.{g}lm and fitted.{g}lm
	have been removed: they were each identical to the default
	method.

    o	La.eigen() is deprecated now eigen() uses LAPACK by default.


INSTALLATION CHANGES

    o	The defaults for configure are now --without-zlib
	--without-bzlib --without-pcre.	 PCRE >= 4.0 is now required:
	the included PCRE sources have been updated to version 4.5.

    o	configure no longer lists bzip2 and PCRE as `additional