@@ -12,7 +12,7 @@
   packages. These tools will replace \code{\link{update.packages}} and friends
   in the future and are currently work in progress.}
 \usage{
-packageStatus(lib.loc = NULL, repositories = getOption("repositories"))
+packageStatus(lib.loc = NULL, repositories = getOption("repositories")())
 
 \method{summary}{packageStatus}(object, \dots)
 
